--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -58,7 +58,28 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
+  const keys = document.querySelectorAll('.key');
 
+  function playSound(evt) {
+    const key = document.querySelector(`.key[data-key="${evt.keyCode}"]`);
+    const audio = document.querySelector(`audio[data-key="${evt.keyCode}"]`);
+
+    if (!audio) return;
+
+    key.classList.add('playing');
+
+    audio.currentTime = 0;
+    audio.play();
+  }
+
+  function removeTransition(evt) {
+    if (evt.propertyName !== 'transform') return;
+
+    this.classList.remove('playing');
+  }
+
+  document.addEventListener('keydown', playSound);
+  keys.forEach(key => key.addEventListener('transitionend', removeTransition));
 </script>
 
 
