--- a/02 - JS + CSS Clock/index-START.html
+++ b/02 - JS + CSS Clock/index-START.html
@@ -61,12 +61,39 @@
       background:black;
       position: absolute;
       top:50%;
+      transform-origin: 100%;
+      transform: rotate(90deg);
+      transition: all 0.05s;
+      transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
     }
-
   </style>
 
   <script>
+    const hoursHand = document.querySelector('.hour-hand');
+    const minutesHand = document.querySelector('.min-hand');
+    const secondsHand = document.querySelector('.second-hand');
 
+    function setRotate(elem, time) {
+      const deg = time / 60 * 360 + 90;
+      elem.style.transform = `rotate(${deg}deg)`;
+    }
+
+    function setTime() {
+      const now = new Date();
+
+      const hours = now.getHours();
+      setRotate(hoursHand, hours);
+
+      const minutes = now.getMinutes();
+      setRotate(minutesHand, minutes);
+
+      const seconds = now.getSeconds();
+      setRotate(secondsHand, seconds);
+    }
+
+    setInterval(setTime, 1000);
+
+    setTime();
 
   </script>
 </body>
