--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -27,28 +27,61 @@
 
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+    const born1500 = inventors.filter(inventor =>
+      inventor.year >= 1500 && inventor.year < 1600
+    );
+    console.table(born1500);
 
     // Array.prototype.map()
     // 2. Give us an array of the inventory first and last names
+    const names = inventors.map(inventor =>
+      `${inventor.first} ${inventor.last}`
+    );
+    console.log(names);
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    const sortByBirthday = inventors.sort((a, b) => a.year - b.year);
+    console.table(sortByBirthday);
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live?
+    const inventorsLive = inventors.reduce((count, inventor) =>
+      count + inventor.passed - inventor.year
+    , 0);
+    console.log(inventorsLive);
 
     // 5. Sort the inventors by years lived
+    const sortByYearsLived = inventors.sort((a, b) =>
+      (b.passed - b.year) - (a.passed - a.year)
+    );
+    console.table(sortByYearsLived);
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
-
+    const category = document.querySelector('.mw-category');
+    // const links = [...category.querySelectorAll('a')];
+    const links = Array.from(category.querySelectorAll('a'));
+    const de = links
+                  .map(link => link.textContent)
+                  .filter(name => name.includes('de'));
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    const sortedByLastName = people.sort((a, b) =>
+      a.split(', ')[0] > b.split(', ')[0] ? 1 : -1
+    );
+    console.log(sortedByLastName);
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+    const sum = data.reduce((obj, t) => {
+      obj[t] ? obj[t]++ : obj[t] = 1;
+
+      return obj;
+    }, {});
+    console.log(sum);
 
   </script>
 </body>
