--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -31,22 +31,21 @@
     //     return true;
     //   }
     // });
-
-    const isAdult = people.some(person => ((new Date()).getFullYear()) - person.year >= 19);
-
+    const isAdult = people.some(person =>
+      ((new Date()).getFullYear()) - person.year >= 19
+    );
     console.log({isAdult});
-    // Array.prototype.every() // is everyone 19?
 
-    const allAdults = people.every(person => ((new Date()).getFullYear()) - person.year >= 19);
+    // Array.prototype.every() // is everyone 19?
+    const allAdults = people.every(person =>
+      ((new Date()).getFullYear()) - person.year >= 19
+    );
     console.log({allAdults});
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
-
-
     const comment = comments.find(comment => comment.id === 823423);
-
     console.log(comment);
 
     // Array.prototype.findIndex()
@@ -56,7 +55,6 @@
     console.log(index);
 
     // comments.splice(index, 1);
-
     const newComments = [
       ...comments.slice(0, index),
       ...comments.slice(index + 1)
