--- a/09 - Dev Tools Domination/index-START.html
+++ b/09 - Dev Tools Domination/index-START.html
@@ -18,28 +18,60 @@
     }
 
     // Regular
+    console.log('test');
 
     // Interpolated
+    console.log('Hello i am a %s', 'test');
 
     // Styled
+    console.log('%cStyled test', 'font-size:18px; color:red;');
 
     // warning!
+    console.warn('Warning!');
 
     // Error :|
+    console.error('Error!');
 
     // Info
+    console.info('Info!');
 
     // Testing
+    console.assert(1 === 2, 'It\'s wrong!');
 
     // clearing
+    // console.clear();
 
     // Viewing DOM Elements
+    const p = document.querySelector('p');
+    console.dir(p);
 
     // Grouping together
+    dogs.forEach(dog => {
+      console.groupCollapsed(`${dog.name}`);
+      console.log(`This is ${dog.name}`);
+      console.log(`${dog.name} is ${dog.age * 7} dog years old`);
+      console.groupEnd(`${dog.name}`);
+    });
 
     // counting
+    console.count('test');
+    console.count('test');
+    console.count('test2');
+    console.count('test');
+    console.count('test');
+    console.count('test2');
+    console.count('test');
 
     // timing
+    console.time('fetching data');
+    fetch('https://api.github.com/users/rustamyusupov')
+      .then(data => data.json())
+      .then(data => {
+        console.timeEnd('fetching data');
+        console.log(data);
+      });
+
+    console.table(dogs);
 
   </script>
 </body>
