--- a/10 - Hold Shift and Check Checkboxes/index-START.html
+++ b/10 - Hold Shift and Check Checkboxes/index-START.html
@@ -103,7 +103,31 @@
     </div>
   </div>
 
-<script>
-</script>
+  <script>
+    const checkboxes = document.querySelectorAll('input[type=checkbox]');
+    let lastChecked = null;
+
+    function handleCheck(evt) {
+      let inBetween = false;
+
+      if (evt.shiftKey && this.checked) {
+        checkboxes.forEach(checkbox => {
+          if (checkbox === this || checkbox === lastChecked) {
+            inBetween = !inBetween;
+          }
+
+          if (inBetween) {
+            checkbox.checked = true;
+          }
+        });
+      }
+
+      lastChecked = this;
+    }
+
+    checkboxes.forEach(checkbox => 
+      checkbox.addEventListener('click', handleCheck)
+    );
+  </script>
 </body>
 </html>
